Dependence Analysis and Scoping.